[build-system]
requires = ["setuptools==69.2.0", "wheel==0.43.0", "setuptools-scm==8.1.0"]
build-backend = 'setuptools.build_meta'

[project]
name = 'grizzly-loadtester-ls'
description = 'LSP server implementation for grizzly-loadtester load scenario development'
dependencies = [
    'pygls ==1.3.1',
    'behave ==1.2.6',
    'random-word ==1.0.11',
    'colorama ==0.4.6',
    'Jinja2 ==3.1.4',
    'jinja2-simple-tags ==0.6.1',
    'ordered-set ==4.1.0'
]
readme = 'README.md'
authors = [
    {name = 'biometria', email='opensource@biometria.se'}
]
license = {text = 'MIT'}
dynamic = ['version']
requires-python = ">=3.9"
classifiers = [
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: Implementation :: CPython'
]
keywords = [
    'locust',
    'behave',
    'grizzly',
    'grizzly-loadtester',
    'loadtest',
    'load',
    'performance',
    'traffic generator',
    'lsp',
    'vscode'
]

[project.scripts]
grizzly-ls = 'grizzly_ls.__main__:main'

[tool.setuptools.package-data]
grizzly_ls = ['py.typed']

[project.urls]
Documentation = 'https://biometria-se.github.io/grizzly/editor-support/'
Code = 'https://github.com/biometria-se/grizzly-lsp/'
Tracker = 'https://github.com/Biometria-se/grizzly/issues'

[project.optional-dependencies]
dev = [
    'pytest ==8.1.1',
    'coverage[toml] ==6.4.4',
    'pytest-cov ==5.0.0',
    'pytest-mock ==3.14.0',
    'pytest-timeout ==2.3.1',
    'pylint ==3.2.6',
    'flake8-pyproject ==1.2.3',
    'black ==24.8.0',
    'mypy ==1.11.1',
    'requests ==2.32.3',
    'types-requests >=2.27.13,<3.0.0',
    'pip-licenses ==4.3.4',
    'pytablewriter ==1.2.0',
    'types-colorama ==0.4.15.20240311',
    'grizzly-loadtester >=2.10.2'
]

debug = [
    'debugpy ==1.8.1'
]

ci = [
    'build ==1.1.1',
    'twine ==5.0.0'
]

[tool.setuptools_scm]
root = ".."

[tool.pytest.ini_options]
timeout = 300
addopts = [
    "-c", "pyproject.toml",
    "--cov-reset",
    "--cov=src/grizzly_ls",
    "--cov-report=xml:grizzly-ls/.coverage.xml",
    "--no-cov-on-fail"
]
filterwarnings = [
    "ignore:The distutils.*is deprecated.*:DeprecationWarning",
    "ignore:There is no current event loop.*:DeprecationWarning"
]

[tool.pylint.master]
jobs = 1
disable = 'all'
ignore-long-lines = ['^\s*(# )?<?https?://\S+>?$']
enable = [
    'F',
    'unreachable',
    'duplicate-key',
    'unnecessary-semicolon',
    'global-variable-not-assigned',
    'unused-variable',
    'unused-wildcard-import',
    'unused-import',
    'line-too-long',
    'binary-op-exception',
    'bad-format-string',
    'anomalous-backslash-in-string',
    'bad-open-mode',
    'E0001', 'E0011', 'E0012', 'E0100', 'E0101',
    'E0102', 'E0103', 'E0104', 'E0105', 'E0107',
    'E0108', 'E0110', 'E0111', 'E0112', 'E0113',
    'E0114', 'E0115', 'E0116', 'E0117', 'E0118',
    'E0202', 'E0203', 'E0211', 'E0213', 'E0236',
    'E0237', 'E0238', 'E0239', 'E0240', 'E0241',
    'E0301', 'E0302', 'E0303', 'E0401', 'E0402',
    'E0601', 'E0602', 'E0603', 'E0604', 'E0611',
    'E0632', 'E0633', 'E0701', 'E0702', 'E0703',
    'E0704', 'E0710', 'E0711', 'E0712', 'E1003',
    'E1101', 'E1102', 'E1111', 'E1120', 'E1121',
    'E1123', 'E1124', 'E1125', 'E1126', 'E1127',
    'E1128', 'E1129', 'E1130', 'E1131', 'E1132',
    'E1133', 'E1134', 'E1135', 'E1136', 'E1137',
    'E1138', 'E1139', 'E1200', 'E1201', 'E1205',
    'E1206', 'E1300', 'E1301', 'E1302', 'E1303',
    'E1304', 'E1305', 'E1306', 'E1310', 'E1700',
    'E1701'
]

max-line-length = 180
msg-template = '{path}:{line}:{column},{category},{symbol}:{msg}'
reports = 'no'
output-format = 'text'

[tool.black]
line-length = 180
skip-string-normalization = true

[tool.flake8]
max-line-length = 180
ignore = ['E722', 'W503', 'E402', 'F405', 'F403', 'E203']
exclude = ['.git', '__pycache__', 'docs', 'build', 'dist']

[tool.mypy]
mypy_path = 'types/'

[[tool.mypy.overrides]]
module = "piplicenses.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytablewriter.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "re.*"
ignore_missing_imports = true

[tool.coverage.report]
omit = ["src/grizzly_ls/__init__.py"]
